k8s/base-api.yaml
# Copyright (C) 2022 Andrew Rioux
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
# 
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: unitplannerv7
  name: base-api
  labels:
    name: base-api
spec:
  replicas: 1
  selector:
    matchLabels:
      name: base-api
  template:
    metadata:
      labels:
        name: base-api
    spec:
      containers:
      - name: base-api
        image: ghcr.io/cap-md089/unitplannerv7/apis/main:$BASE_API_TAG
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
          name: http-api
        resources:
          limits:
            memory: 200Mi
            cpu: 500m
        volumeMounts:
        - name: host-etc
          mountPath: /host-etc
      volumes:
      - name: host-etc
        hostPath:
          path: /host-etc
