k8s/service-host-configuration.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: unitplannerv7
  name: host-configuration
spec:
  selector:
    matchLabels:
      name: host-configuration
  template:
    metadata:
      labels:
        name: host-configuration
    spec:
      containers:
      - name: host-configuration
        image: ghcr.io/cap-md089/unitplannerv7/services/hostconfiguration:$HOST_CONFIGURATION_TAG
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 5050
      serviceAccountName: host-configuration-service-account
