k8s/base.yaml
# Copyright (C) 2022 Andrew Rioux
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
# 
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

apiVersion: v1
kind: Namespace
metadata:
  name: unitplannerv7

---

apiVersion: v1
kind: Service
metadata:
  namespace: unitplannerv7
  name: db
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---

apiVersion: v1
kind: Service
metadata:
  namespace: unitplannerv7
  name: base-api
spec:
  selector:
    name: base-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  namespace: unitplannerv7
  name: authentication
spec:
  selector:
    name: authentication
  ports:
    - protocol: TCP
      port: 5010
      targetPort: 5010

---

apiVersion: v1
kind: Service
metadata:
  namespace: unitplannerv7
  name: capwatch
spec:
  selector:
    name: capwatch
  ports:
    - protocol: TCP
      port: 5020
      targetPort: 5020

---

apiVersion: v1
kind: Service
metadata:
  namespace: unitplannerv7
  name: files
spec:
  selector:
    name: files
  ports:
    - protocol: TCP
      port: 5030
      targetPort: 5030

---

apiVersion: v1
kind: Service
metadata:
  namespace: unitplannerv7
  name: graph
spec:
  selector:
    name: graph
  ports:
    - protocol: TCP
      port: 5040
      targetPort: 5040

---

apiVersion: v1
kind: Service
metadata:
  namespace: unitplannerv7
  name: host-configuration
spec:
  selector:
    name: host-configuration
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
