k8s/mysql-test.yaml

apiVersion: v1
kind: Pod
metadata:
  namespace: unitplannerv7
  name: mysql
  labels:
    name: mysql
spec:
  containers:
  - image: mysql:8.0.26
    name: mysql
    ports:
    - containerPort: 3306
      name: mysql
    volumeMounts:
    - name: mysql-persistent-storage
      mountPath: /var/lib/mysql
  volumes:
  - name: mysql-persistent-storage
    hostPath:
      path: "/srv/unitplannerv7/mysqldata-test"

---

apiVersion: v1
kind: Service
metadata:
  namespace: unitplannerv7
  name: db
spec:
  selector:
    name: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
      name: mysql
