k8s/client-admin.yaml
# Copyright (C) 2022 Andrew Rioux
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
# 
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

apiVersion: v1
kind: Service
metadata:
  namespace: unitplannerv7
  name: client-admin-static
spec:
  selector:
    name: client-admin-static
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: unitplannerv7
  name: client-admin-static
spec:
  selector:
    matchLabels:
      name: client-admin-static
  template:
    metadata:
      labels:
        name: client-admin-static
    spec:
      containers:
      - name: client-admin-static
        image: ghcr.io/cap-md089/unitplannerv7/client/admin
        imagePullPolicy: Never
        ports:
        - containerPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: unitplannerv7
  name: client-admin-static
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - admin.localunitplanner.org
    secretName: client-admin-tls-secret
  rules:
  - host: admin.localunitplanner.org
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: base-api
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-admin-static
            port:
              number: 80
