k8s/seed-service-test.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: unitplannerv7
  name: seed-service
spec:
  ingressClassName: nginx
  rules:
  - host: seed.localunitplanner.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testing-seed-service
            port:
              number: 4090

---

apiVersion: v1
kind: Service
metadata:
  namespace: unitplannerv7
  name: testing-seed-service
spec:
  selector:
    name: test-seed-service
  ports:
    - protocol: TCP
      port: 4090
      targetPort: 4090

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: unitplannerv7
  name: test-seed-service
spec:
  selector:
    matchLabels:
      name: test-seed-service
  template:
    metadata:
      labels:
        name: test-seed-service
    spec:
      containers:
      - name: test-seed-service
        image: ghcr.io/cap-md089/unitplannerv7/apis/main-integrationtests
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 4090
      serviceAccountName: seed-service-account
